--- a/templates/exp.html
+++ b/templates/exp.html
@@ -26,6 +26,8 @@
 			var counterbalance = {{ counterbalance }}; // a number indexing counterbalancing conditions
 			var adServerLoc = "{{ adServerLoc }}"; // the location of your ad (so you can send user back at end of experiment)
 			var mode = "{{ mode }}";
+
+			var INST_WAIT_TIME =0; //10000; //0; //10000;
 		</script>
 				
 		<!-- utils.js and psiturk.js provide the basic psiturk functionality -->
