--- a/templates/debriefing.html
+++ b/templates/debriefing.html
@@ -1,60 +1,55 @@
-<!DOCTYPE html>
+<!doctype html>
 
 
 <html>
 <head>
-        <meta charset="utf-8" />
 	<title>Debriefing</title>
-	<link rel="stylesheet" href="/static/css/task.css" type="text/css" media="screen" />
+	<link rel="stylesheet" href="/static/css/task.css" type="text/css" media="screen">
 </head>
 <body>
 	<div id="debriefing">
 		<h1>Debriefing</h1>
 
 		<div id="debriefingtext">
-		<p>Thank you for your participation in our study!  Your anonymous data makes an
-		important contribution to our understanding of human learning and memory. </p>
+            <p>The purpose of this study was to examine how we learn about others and make decisions involving other people. Past research has shown that people rapidly form impressions of others; however, less is known about how we learn about others through experience, and how such learning influences social decisions. Additionally, little is known about how social contexts change the way we learn about and thus make decisions about others. To test these questions, you completed tasks in which you were able to learn about others, and were asked to make decisions involving others as well. You may have been placed in different social contexts, e.g. learned about members of the same or different social groups as your own, been placed in a socially stressful situation, or been given feedback heightening different social concerns. Alternatively, you may have been in a control condition in which these social contexts were absent or not highlighted.</p>
+            
+            <p>This study relates to more general questions regarding how we form impressions of others and how we learn through trial and error.</p>
 
-		<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam
-		nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat
-		volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation
-		ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis
-		autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie
-		consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et
-		accumsan et iusto odio dignissim qui blandit praesent luptatum zzril
-		delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum
-		soluta nobis eleifend option congue nihil imperdiet doming id quod mazim
-		placerat facer possim assum. Typi non habent claritatem insitam; est usus
-		legentis in iis qui facit eorum claritatem. Investigationes demonstraverunt
-		lectores legere me lius quod ii legunt saepius. Claritas est etiam
-		processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum
-		est notare quam littera gothica, quam nunc putamus parum claram,
-		anteposuerit litterarum formas humanitatis per seacula quarta decima et
-		quinta decima. Eodem modo typi, qui nunc nobis videntur parum clari, fiant
-		sollemnes in futurum.</p>
+            <p>Further reading: Hackel, L. M., Doll, B. B., and Amodio, D. M. (2015). Instrumental learning of traits versus rewards: Dissociable neural correlates and effects on choice. Nature Neuroscience, 18(9), 1233-1235.</p>
 		
-		<p>If you have any questions about this research, you may contact the
-		principal investigator, Principal Investigator.</p>
+		<p>Thank you for your participation! If you have any questions, concerns, or comments, feel free to contact principal investigator, Prof. David Amodio, david.amodio@nyu.edu, or Jeff Berg, bergj@nyu.edu. If anything about this study caused you to feel distress or upset, we will refer you to a counselor or NYU administrator.</p>
 		</div>
 
 			<p class="cool">Do you agree to the following statement?</p>
 			<div id="affirmationbox">
 				<p>I feel that I have been adequately debriefed about the nature
 					of the study.  The investigator has explained the purposes of the
-					research to me, and I feel that any questions I have asked were
-					satisfactorily answered.</p>
-					<table><tr>
-						<td id="affirmative" onClick="javascript:document.forms['accept'].submit()">Yes, I agree.</td>
-						<td id="negative" onClick="javascript:document.forms['decline'].submit()">No, please withhold my data. I will contact the experimenter with questions.</td>
-					</tr></table> 
-					<form id="accept" action="complete" method="post">
-						<input type="hidden" name="uniqueid" value="{{ uniqueId }}" />
-						<input type="hidden" name="agree" value="true" />
-					</form>
-					<form id="decline" action="complete" method="post">
-						<input type="hidden" name="uniqueid" value="{{ uniqueId }}" />
-						<input type="hidden" name="agree" value="false" />
-					</form>
+					research.</p>
+					 </div>
+                <div class="col-md-4">
+                    <select id="debrief" name="debrief">
+                        <option value="1">Yes, I agree</option>
+                        <option value="0">No, please withhold my data</option>
+                    </select>
+                </div>
+            </div>
+            
+             <hr>
+
+    <div class="instructionsnav">
+        <div class="row">
+            <div class="col-xs-2">
+            </div>
+            <div class="col-xs-7">
+            </div>
+            <div class="col-xs-3">
+                <button type="button" id="next" value="next" class="btn btn-primary btn-lg continue">
+                    Continue <span class="glyphicon glyphicon-arrow-right"></span>
+                </button>
+            </div>
+        </div>
+    </div>
+					
 			</div>
 	</div>
 </body>
